--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.icon-dark {
+  fill: white;
+}
+
+.mode-icon:hover {
+  cursor: pointer;
+}
+
+.color-box {
+  width: 300px;
+  height: 50px;
+  border: solid;
+  border-color: gray;
+  border-width: 1px;
+}
+/*# sourceMappingURL=style.css.map */
